--- a/html/Cobrinha.html
+++ b/html/Cobrinha.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Snake PVP com Buffs</title>
-  <link rel="stylesheet" href="/css/Cobrinha.css">
+  <link rel="stylesheet" href="/Jogo-cobrinha-main/css/Cobrinha.css">
 </head>
 <body>
   <div class="game-container">
@@ -31,6 +31,6 @@
   </div>
 </div>
 
-  <script src="/js/Cobrinha.js"></script>
+  <script src="/Jogo-cobrinha-main/js/Cobrinha.js"></script>
 </body>
 </html>
